shaderc-bindings/shaderc_wrapper.h

// Core shaderc types
typedef struct shaderc_compiler* shaderc_compiler_t;
typedef struct shaderc_compile_options* shaderc_compile_options_t;
typedef struct shaderc_compilation_result* shaderc_compilation_result_t;
// Shader kinds
typedef enum {
    shaderc_vertex_shader,
    shaderc_fragment_shader,
    shaderc_compute_shader,
    shaderc_geometry_shader,
    shaderc_tess_control_shader,
    shaderc_tess_evaluation_shader,
    shaderc_glsl_vertex_shader = shaderc_vertex_shader,
    shaderc_glsl_fragment_shader = shaderc_fragment_shader,
    shaderc_glsl_compute_shader = shaderc_compute_shader,
    shaderc_glsl_geometry_shader = shaderc_geometry_shader,
    shaderc_glsl_tess_control_shader = shaderc_tess_control_shader,
    shaderc_glsl_tess_evaluation_shader = shaderc_tess_evaluation_shader,
    shaderc_glsl_infer_from_source,
    shaderc_glsl_default_vertex_shader,
    shaderc_glsl_default_fragment_shader,
    shaderc_glsl_default_compute_shader,
    shaderc_glsl_default_geometry_shader,
    shaderc_glsl_default_tess_control_shader,
    shaderc_glsl_default_tess_evaluation_shader,
    shaderc_spirv_assembly,
    shaderc_raygen_shader,
    shaderc_anyhit_shader,
    shaderc_closesthit_shader,
    shaderc_miss_shader,
    shaderc_intersection_shader,
    shaderc_callable_shader,
    shaderc_glsl_raygen_shader = shaderc_raygen_shader,
    shaderc_glsl_anyhit_shader = shaderc_anyhit_shader,
    shaderc_glsl_closesthit_shader = shaderc_closesthit_shader,
    shaderc_glsl_miss_shader = shaderc_miss_shader,
    shaderc_glsl_intersection_shader = shaderc_intersection_shader,
    shaderc_glsl_callable_shader = shaderc_callable_shader,
    shaderc_task_shader,
    shaderc_mesh_shader,
    shaderc_glsl_task_shader = shaderc_task_shader,
    shaderc_glsl_mesh_shader = shaderc_mesh_shader,
} shaderc_shader_kind;
shaderc_compilation_result_t shaderc_compile_into_spv_assembly(const shaderc_compiler_t compiler,
                                                               const char* source_text,
                                                               size_t source_text_size,
                                                               shaderc_shader_kind shader_kind,
                                                               const char* input_file_name,
                                                               const char* entry_point_name,
                                                               const shaderc_compile_options_t additional_options);
shaderc_compilation_result_t shaderc_compile_into_preprocessed_text(const shaderc_compiler_t compiler,
                                                                    const char* source_text,
                                                                    size_t source_text_size,
                                                                    shaderc_shader_kind shader_kind,
                                                                    const char* input_file_name,
                                                                    const char* entry_point_name,
                                                                    const shaderc_compile_options_t additional_options);
// Result functions
void shaderc_result_release(shaderc_compilation_result_t result);
size_t shaderc_result_get_length(const shaderc_compilation_result_t result);
size_t shaderc_result_get_num_warnings(const shaderc_compilation_result_t result);
size_t shaderc_result_get_num_errors(const shaderc_compilation_result_t result);