shaderc-bindings/src/main/java/io/github/yetyman/shaderc/generated/ShadercFFM.java


    /**
     * {@snippet lang=c :
     * shaderc_compilation_result_t shaderc_compile_into_spv_assembly(const shaderc_compiler_t compiler, const char *source_text, size_t source_text_size, shaderc_shader_kind shader_kind, const char *input_file_name, const char *entry_point_name, const shaderc_compile_options_t additional_options)
     * }
     */
    public static MemorySegment shaderc_compile_into_spv_assembly(MemorySegment compiler, MemorySegment source_text, long source_text_size, int shader_kind, MemorySegment input_file_name, MemorySegment entry_point_name, MemorySegment additional_options) {
        var mh$ = shaderc_compile_into_spv_assembly.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_into_spv_assembly", compiler, source_text, source_text_size, shader_kind, input_file_name, entry_point_name, additional_options);
            }
            return (MemorySegment)mh$.invokeExact(compiler, source_text, source_text_size, shader_kind, input_file_name, entry_point_name, additional_options);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_into_preprocessed_text {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_LONG_LONG,
            ShadercFFM.C_INT,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_into_preprocessed_text");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * shaderc_compilation_result_t shaderc_compile_into_preprocessed_text(const shaderc_compiler_t compiler, const char *source_text, size_t source_text_size, shaderc_shader_kind shader_kind, const char *input_file_name, const char *entry_point_name, const shaderc_compile_options_t additional_options)
     * }
     */
    public static FunctionDescriptor shaderc_compile_into_preprocessed_text$descriptor() {
        return shaderc_compile_into_preprocessed_text.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * shaderc_compilation_result_t shaderc_compile_into_preprocessed_text(const shaderc_compiler_t compiler, const char *source_text, size_t source_text_size, shaderc_shader_kind shader_kind, const char *input_file_name, const char *entry_point_name, const shaderc_compile_options_t additional_options)
     * }
     */
    public static MethodHandle shaderc_compile_into_preprocessed_text$handle() {
        return shaderc_compile_into_preprocessed_text.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * shaderc_compilation_result_t shaderc_compile_into_preprocessed_text(const shaderc_compiler_t compiler, const char *source_text, size_t source_text_size, shaderc_shader_kind shader_kind, const char *input_file_name, const char *entry_point_name, const shaderc_compile_options_t additional_options)
     * }
     */
    public static MemorySegment shaderc_compile_into_preprocessed_text$address() {
        return shaderc_compile_into_preprocessed_text.ADDR;
    }

    /**
     * {@snippet lang=c :
     * shaderc_compilation_result_t shaderc_compile_into_preprocessed_text(const shaderc_compiler_t compiler, const char *source_text, size_t source_text_size, shaderc_shader_kind shader_kind, const char *input_file_name, const char *entry_point_name, const shaderc_compile_options_t additional_options)
     * }
     */
    public static MemorySegment shaderc_compile_into_preprocessed_text(MemorySegment compiler, MemorySegment source_text, long source_text_size, int shader_kind, MemorySegment input_file_name, MemorySegment entry_point_name, MemorySegment additional_options) {
        var mh$ = shaderc_compile_into_preprocessed_text.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_into_preprocessed_text", compiler, source_text, source_text_size, shader_kind, input_file_name, entry_point_name, additional_options);
            }
            return (MemorySegment)mh$.invokeExact(compiler, source_text, source_text_size, shader_kind, input_file_name, entry_point_name, additional_options);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_result_release {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_result_release");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_result_release(shaderc_compilation_result_t result)
     * }
     */
    public static FunctionDescriptor shaderc_result_release$descriptor() {
        return shaderc_result_release.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_result_release(shaderc_compilation_result_t result)
     * }
     */
    public static MethodHandle shaderc_result_release$handle() {
        return shaderc_result_release.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_result_release(shaderc_compilation_result_t result)
     * }
     */
    public static MemorySegment shaderc_result_release$address() {
        return shaderc_result_release.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_result_release(shaderc_compilation_result_t result)
     * }
     */
    public static void shaderc_result_release(MemorySegment result) {
        var mh$ = shaderc_result_release.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_result_release", result);
            }
            mh$.invokeExact(result);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_result_get_length {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ShadercFFM.C_LONG_LONG,
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_result_get_length");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * size_t shaderc_result_get_length(const shaderc_compilation_result_t result)
     * }
     */
    public static FunctionDescriptor shaderc_result_get_length$descriptor() {
        return shaderc_result_get_length.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * size_t shaderc_result_get_length(const shaderc_compilation_result_t result)
     * }
     */
    public static MethodHandle shaderc_result_get_length$handle() {
        return shaderc_result_get_length.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * size_t shaderc_result_get_length(const shaderc_compilation_result_t result)
     * }
     */
    public static MemorySegment shaderc_result_get_length$address() {
        return shaderc_result_get_length.ADDR;
    }

    /**
     * {@snippet lang=c :
     * size_t shaderc_result_get_length(const shaderc_compilation_result_t result)
     * }
     */
    public static long shaderc_result_get_length(MemorySegment result) {
        var mh$ = shaderc_result_get_length.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_result_get_length", result);
            }
            return (long)mh$.invokeExact(result);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_result_get_num_warnings {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ShadercFFM.C_LONG_LONG,
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_result_get_num_warnings");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * size_t shaderc_result_get_num_warnings(const shaderc_compilation_result_t result)
     * }
     */
    public static FunctionDescriptor shaderc_result_get_num_warnings$descriptor() {
        return shaderc_result_get_num_warnings.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * size_t shaderc_result_get_num_warnings(const shaderc_compilation_result_t result)
     * }
     */
    public static MethodHandle shaderc_result_get_num_warnings$handle() {
        return shaderc_result_get_num_warnings.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * size_t shaderc_result_get_num_warnings(const shaderc_compilation_result_t result)
     * }
     */
    public static MemorySegment shaderc_result_get_num_warnings$address() {
        return shaderc_result_get_num_warnings.ADDR;
    }

    /**
     * {@snippet lang=c :
     * size_t shaderc_result_get_num_warnings(const shaderc_compilation_result_t result)
     * }
     */
    public static long shaderc_result_get_num_warnings(MemorySegment result) {
        var mh$ = shaderc_result_get_num_warnings.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_result_get_num_warnings", result);
            }
            return (long)mh$.invokeExact(result);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_result_get_num_errors {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ShadercFFM.C_LONG_LONG,
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_result_get_num_errors");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * size_t shaderc_result_get_num_errors(const shaderc_compilation_result_t result)
     * }
     */
    public static FunctionDescriptor shaderc_result_get_num_errors$descriptor() {
        return shaderc_result_get_num_errors.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * size_t shaderc_result_get_num_errors(const shaderc_compilation_result_t result)
     * }
     */
    public static MethodHandle shaderc_result_get_num_errors$handle() {
        return shaderc_result_get_num_errors.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * size_t shaderc_result_get_num_errors(const shaderc_compilation_result_t result)
     * }
     */
    public static MemorySegment shaderc_result_get_num_errors$address() {
        return shaderc_result_get_num_errors.ADDR;
    }
